# flask-jwt-extended

./: .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  4.0.0_changelog.md  LICENSE  MANIFEST.in  README.md  app.py  dev-reqirements.txt  flask-jwt-extended-ci.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
docs/: Makefile  add_custom_data_claims.rst  api.rst  automatic_user_loading.rst  basic_usage.rst  blacklist_and_token_revoking.rst  blocklist_and_token_revoking.rst  changing_default_behavior.rst  complex_objects_from_token.rst  conf.py  custom_decorators.rst  documentation.rst  index.rst  installation.rst  optional_endpoints.rst  options.rst  refresh_tokens.rst  refreshing_tokens.rst  testing_and_coverage.rst  token_freshness.rst  token_locations.rst  tokens_from_complex_object.rst  tokens_in_cookies.rst  tokens_in_json_body.rst  tokens_in_query_string.rst  v4_upgrade_guide.rst  watchdocumentation.sh
examples/: additional_data_in_access_token.py  app.py  automatic_user_loading.py  backlist_both_tokens.py  blacklist.py  blocklist.py  blocklist_database.py  blocklist_redis.py  complex_objects_from_tokens.py  csrf_protection_with_cookies.py  custom_decorators.py  implicit_refresh.py  jwt_in_cookie.py  jwt_in_json.py  jwt_in_query_string.py  jwt_locations.py  jwt_without_cookies.py  loaders.py  oidc.py  optional_protected_endpoints.py  redis_blacklist.py  redis_blocklist.py  refresh_tokens.py  simple.py  token_freshness.py  token_in_cookie.py  tokens_from_complex_objects.py
(+71 files in other folders)
