[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # Line too long. Handled by E501 and Black
    B950
max-line-length = 90
per-file-ignores =
    # __init__ modules export names
    **/__init__.py: F401
    # Don't care about using data classes examples. For demo purposes only
    examples/*.py: B903
